remove updater and small bug fixes

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*---------------------------------------------------------------------------------
  Theme Name:   ProjectKit Theme
  Theme URI:    https://getideakit.com
- Description:  Theme for main ProjectKit
+ Description:  Divi child theme for ProjectKit
  Author:       Nerd Intelligence Agency
  Author URI:   https://nerdintel.com
  Template:     Divi
